// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumb As Button 1`] = `
<div
  data-css-nipl9k=""
>
  <button
    data-css-scrazl=""
    disabled={false}
    onClick={[Function]}
  >
    <div
      data-css-73kfkk=""
    >
      <div
        data-css-k31qw2=""
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      data-css-15b13by=""
    >
      Clicks once
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Breadcrumb As Link 1`] = `
<div
  data-css-nipl9k=""
>
  <a
    data-css-scrazl=""
    href="https://duckduckgo.com"
  >
    <div
      data-css-73kfkk=""
    >
      <div
        data-css-k31qw2=""
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      data-css-15b13by=""
    >
      Click as link
    </span>
  </a>
</div>
`;

exports[`Storyshots Components/Breadcrumb Basic 1`] = `
<div
  data-css-nipl9k=""
>
  <button
    data-css-scrazl=""
    disabled={false}
  >
    <div
      data-css-73kfkk=""
    >
      <div
        data-css-k31qw2=""
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      data-css-15b13by=""
    >
      All the things
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Breadcrumb Disabled 1`] = `
<div
  data-css-nipl9k=""
>
  <button
    data-css-18r2msp=""
    disabled={true}
    onClick={[Function]}
  >
    <div
      data-css-73kfkk=""
    >
      <div
        data-css-k31qw2=""
      >
        <svg
          aria-label="caret left icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m8 12 5-5 1.41 1.41L10.83 12l3.58 3.59L13 17"
          />
        </svg>
      </div>
    </div>
    <span
      aria-hidden={false}
      data-css-15b13by=""
    >
      Disabled
    </span>
  </button>
</div>
`;
